# libcu

./: .gitignore  README.md  build.cmd  build.sh  fileutils.cmd  fileutils.sh
docs/: fixed-assets.md  sentinel.md
docs/reference/: crtdefscu.md  cuda_runtimecu.md  direntcu.md  fcntlcu.md  stddefcu.md  stdiocu.md  unistdcu.md
docs/reference/ext/: hash.md  memfile.md  mutex.md  pipeline.md
docs/reference/sys/: statcu.md  timecu.md
src/: CMakeLists.fileutils.txt  CMakeLists.full.txt  CMakeLists.txt  CMakeLists.work.txt  fileutils.sln  libcu.sln
src/include/: _dirent.h  crtdefscu.h  ctypecu.h  cuda_runtimecu.h  direntcu.h  errnocu.h  fcntlcu.h  grpcu.h  jumbo.h  pwdcu.h  regexcu.h  sentinel-client.cpp  sentinel-direntmsg.h  sentinel-fcntlmsg.h  sentinel-hostmsg.h  sentinel-stdiomsg.h  sentinel-stdlibmsg.h  sentinel-timemsg.h  sentinel-unistdmsg.h  sentinel.h  setjmpcu.h  stdargcu.h  stdiocu.h  stdlibcu.h  stringcu.h  timecu.h  unistdcu.h
src/include/bits/: libcu_fpmax.h
src/include/ext/: hash.h  memfile.h  mutex.h  pipeline.cpp  pipeline.h  station-gpu.cu  station.cpp  station.h
src/include/sys/: statcu.h  timecu.h
src/libcu/: crtdefscu.cu  cuda_runtime.cpp  direntcu.cu  errnocu.cu  fcntlcu.cu  fsystem.cu  fsystem.h  grpcu.cu  jumbo-gpu.cu  jumbo.cpp  libcu.cu  libcu.stdlib.cu  libcu.vcxproj  libcu.vcxproj.filters  program.cu  pwdcu.cu  regexcu.cu  sentinel-gpu.cu  sentinel-msg.cpp  sentinel.cpp  setjmpcu.cu  stdiocu.cu  stdlibcu.cu  stringcu.cu  timecu.cu  unistdcu.cu
src/libcu.fileutils/: dcat.cpp  dcat.cu  dcat.cuh  dcat.vcxproj  dcd.cpp  dcd.cu  dcd.cuh  dcd.vcxproj  dchgrp.cpp  dchgrp.cu  dchgrp.cuh  dchgrp.vcxproj  dchgrp_getgrnam.cuh  dchmod.cpp  dchmod.cu  dchmod.cuh  dchmod.vcxproj  dchown.cpp  dchown.cu  dchown.cuh  dchown.vcxproj  dchown_getpwnam.cuh  dcmp.cpp  dcmp.cu  dcmp.cuh  dcmp.vcxproj  dcp.cpp  dcp.cu  dcp.cuh  dcp.vcxproj  dcp_isadir.cuh  ddd.cu  dgrep.cpp  dgrep.cu  dgrep.cuh  dgrep.vcxproj  dl.cu  dln.cu  dls.cpp  dls.cu  (+35 more)
src/libcu.tests/: ctypeTest.cu  direntTest.cu  fsystemTest.cu  grpTest.cu  hostTest.cu  libcu.tests.cu  libcu.tests.vcxproj  libcu.tests.vcxproj.filters  program.cu  pwdTest.cu  regexTest.cu  sentinelTest.cu  setjmpTest.cu  stdafx.cpp  stdafx.h  stdioTest.cu  stdlibTest.cu  timeTest.cu  unistdTest.cu
src/libcu/ext/: hash.cu  memfile.cu  mutex.cu  pipeline.cu  station-gpu.cu  station.cpp
src/libcu/locale/: ascii.cu  mblocal.h  none.cu  utf8.cu  xlocal_private - Copy.h  xlocale.cu  xlocale_private.h  xlocalecu.h
src/libcu/sys/: statcu.cu  timecu.cu
src/tcl/: libcu.jimtcl.txt
src/tcl/jimtcl/: jimsh.cu  jimtcl.vcxproj  jimtcl.vcxproj.filters
src/tcl/libcu.jimtcl/: init.cu  jim-aio.cu  jim-array.cu  jim-clock.cu  jim-eventloop.cu  jim-eventloop.h  jim-exec.cu  jim-file.cu  jim-format.cu  jim-history.cu  jim-interactive.cu  jim-load.cu  jim-namespace.cu  jim-pack.cu  jim-package.cu  jim-posix.cu  jim-readdir.cu  jim-readline.cu  jim-regexp.cu  jim-sdl.cu  jim-signal.cu  jim-signal.h  jim-sqlite3.cu  jim-subcmd.cu  jim-syslog.cu  jim-tclprefix.cu  jim-win32compat.cu  jim.cu  jim.h  jimex.cu  libcu.jimtcl.vcxproj  utf8.cu
src/tcl/libcu.jimtcl.78/: init.cu  jim-aio.cu  jim-array.cu  jim-clock.cu  jim-config.h  jim-eventloop.cu  jim-eventloop.h  jim-exec.cu  jim-file.cu  jim-format.cu  jim-gpu.cu  jim-gpucompat.cu  jim-gpucompat.h  jim-history.cu  jim-interactive.cu  jim-interp.cu  jim-load.cu  jim-namespace.cu  jim-pack.cu  jim-package.cu  jim-posix.cu  jim-readdir.cu  jim-readline.cu  jim-regexp.cu  jim-subcmd.cu  jim-subcmd.h  jim-tclprefix.cu  jim.cu  jim.h  jimautoconf.h  jimiocompat.cu  jimiocompat.h  libcu.jimtcl.78.cu  libcu.jimtcl.78.vcxproj  utf8.cu  utf8.h
src/tcl/libcu.tinytcl/: dos.cu  libcu.tinytcl.vcxproj  regex_compat.cu  tcl.h  tclAlloc.cu  tclAssem.cu  tclBasic.cu  tclCmdAH.cu  tclCmdIL.cu  tclCmdMZ.cu  tclEx.h  tclExDbg.cu  tclExGen.cu  tclExpr.cu  tclGet.cu  tclGlob.cu  tclGpuAZ.cu  tclGpuEnv.cu  tclGpuStr.cu  tclGpuUtil.cu  tclHash.cu  tclHash.h  tclHistory.cu  tclInt.h  tclLoad-noop.cu  tclLoad.cu  tclMod.cu  tclNoExtensions.cu  tclObj.cu  tclParse.cu  tclProc.cu  tclUtil.cu  tclVar.cu
src/tcl/libcu.tinytcl/_content/: sample.tinytcl.cu
src/tcl/tinytcl/: tinySh.cu  tinytcl.vcxproj
